--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "jsonwebtoken": "^8.5.1",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
