--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@middy/core": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
-    "jsonwebtoken": "^8.5.1",
-    "serverless-mysql": "^1.5.4"
+    "aws-sdk": "^2.1114.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
